@@ -8,6 +8,10 @@ pvfs2-1.2.0pre1
 - build: avoid some warnings from gcc4
 - kernel: understand new backing_dev_info format in 2.6.12
 - Added DefaultNumDFiles as filesystem config option.
+- Added num_dfiles tabfile option.  i
+  The number of dfiles is set by searching for the first given hint in this
+  order:  application hints, tabfile, server config.  The selected 
+  distribution may modify the hint if neccesary.
 
 pvfs2-1.1.0
 ===============
